# mneme

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  docker-compose.yml  justfile  pyproject.toml
backend/: pyproject.toml
backend/mneme/: config.py
backend/mneme/api/: app.py  schemas.py
backend/mneme/llm/: __init__.py  chat.py  client.py
backend/mneme/rag/: __init__.py  synthesize.py
backend/mneme/retrieval/: __init__.py  dense.py  filters.py  hybrid.py  pipeline.py  rerank.py  sparse.py
docs/: IMPLEMENTATION.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: CopyButton.tsx  SourceCard.tsx
ingestion/: pyproject.toml
ingestion/mneme_ingest/: __init__.py  chunker.py  embed.py  graph.py  index.py  models.py  parser.py  vectorstore.py
scripts/: detect.sh
tests/: test_api.py  test_chunker.py  test_config.py  test_dense_retrieval.py  test_engine_isolation.py  test_filters.py  test_graph.py  test_hybrid.py  test_index.py  test_llm_client.py  test_parser.py  test_rerank.py  test_smoke.py  test_synthesize.py  test_vectorstore.py
tests/fixtures/sample_vault/: Daily Note.md  Retrieval.md
tests/fixtures/sample_vault/projects/: Architecture.md  Roadmap.md
