[project]
name = "mneme"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.0",
    "qdrant-client>=1.10.0",
    "mneme-ingest",
]

[tool.uv.sources]
mneme-ingest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
